# CPU_DFT-GPU_cuFFT

./: CMakeLists.txt  main.cu
